# NexusLauncher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
doc/: NexusLauncherDoc
spike/conf/: .nx-game-conf.json
spike/crawl/: crawl.cpp
spike/rapidjson/: main.cpp  test.json
src/: main.cpp
src/launcher/class/: Launcher.cpp  Launcher.hpp
src/standalone/GameInfos/class/: GameInfos.cpp  GameInfos.hpp
src/standalone/crawler/class/: Crawler.cpp  Crawler.hpp
src/standalone/errors/class/: BadFormatGameJSONException.hpp  NoSelectedWidgetException.hpp  SystemInitException.hpp  SystemNotFoundException.hpp
src/systems/class/GamesSystem/: GamesSystem.cpp  GamesSystem.hpp
src/systems/class/UISystem/: UISystem.cpp  UISystem.hpp
src/systems/templates/: SystemTpl.hpp
src/widget/class/InteractiveLabel/: InteractiveLabel.cpp  InteractiveLabel.hpp
src/widget/class/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/widget/class/NGameWidgetItem/: ngamewidgetitem.cpp  ngamewidgetitem.h  ngamewidgetitem.ui
